browser/themes/shared/r3dfox.css
/* ... */
@media -moz-pref("r3dfox.colors", 1) {
  :root {
    --arrowpanel-border-color: light-dark(rgb(255, 60, 60), rgb(160, 60, 60)) !important;
    --toolbar-field-focus-border-color: light-dark(rgb(255, 40, 40), rgb(160, 60, 60)) !important;
    --sidebar-border-color: light-dark(rgb(255, 60, 60), rgb(160, 60, 60)) !important;
    --lwt-toolbar-field-highlight: light-dark(rgb(255, 40, 40), rgb(160, 60, 60)) !important;
    --newtab-primary-action-background: light-dark(rgb(255, 20, 20), rgb(255, 80, 80)) !important;
    --newtab-primary-action-background-hover: light-dark(rgb(255, 40, 40), rgb(255, 60, 60)) !important;
    --newtab-primary-action-background-active: light-dark(rgb(255, 40, 40), rgb(255, 40, 40)) !important;
    --color-accent-primary: light-dark(rgb(255, 20, 20), rgb(255, 60, 60)) !important;
    --color-accent-primary-hover: light-dark(rgb(255, 60, 60), rgb(255, 80, 80)) !important;
    --color-accent-primary-active: light-dark(rgb(255, 60, 60), rgb(255, 60, 60)) !important;
    --link-color: light-dark(rgb(255, 20, 20), rgb(255, 80, 80)) !important;
    --link-color-hover: light-dark(rgb(255, 20, 20), rgb(255, 80, 80)) !important;
    --link-color-active: light-dark(rgb(255, 60, 60), rgb(255, 60, 60)) !important;
    --link-color-visited: light-dark(rgb(255, 20, 20), rgb(255, 80, 80)) !important;
    --button-primary-bgcolor: light-dark(rgb(255, 20, 20), rgb(255, 100, 100)) !important;
    --button-primary-hover-bgcolor: light-dark(rgb(255, 60, 60), rgb(255, 80, 80)) !important;
    --button-primary-active-bgcolor: light-dark(rgb(255, 60, 60), rgb(255, 60, 60)) !important;
    --toolbarbutton-icon-fill-attention: light-dark(rgb(255, 20, 20), rgb(255, 80, 80)) !important;
    --download-progress-fill-color: light-dark(rgb(255, 40, 40), rgb(255, 80, 80)) !important;
    --lwt-tab-line-color: light-dark(rgb(255, 40, 40), rgb(255, 80, 80)) !important;
    @media (-moz-content-prefers-color-scheme: dark), (prefers-color-scheme: dark) {
      --color-accent-primary: rgb(255, 60, 60) !important;
      --color-accent-primary-hover: rgb(255, 80, 80) !important;
      --color-accent-primary-active: rgb(255, 60, 60) !important;
    }
    &[privatebrowsingmode=temporary] {
        --tabpanel-background-color: linear-gradient(to bottom, #480808 0%,#240103 93%,#200000 97%,#1E0000 100%) !important;
    }

    .urlbar-input::selection, .searchbar-textbox::selection {
      background: light-dark(rgb(255, 80, 80), rgb(160, 60, 60)) !important;
    }

    .bookmark-item:is(toolbarbutton)[dragover="true"][open="true"] {
      background: light-dark(rgb(255, 80, 80), rgb(160, 60, 60)) !important;
    }

    .tab-drop-indicator {
      background: url(chrome://browser/skin/tabbrowser/r3d-tab-drag-indicator.svg) no-repeat center !important;
    }

    #PlacesToolbarDropIndicator {
      list-style-image: url(chrome://browser/skin/r3d-toolbar-drag-indicator.svg) !important;
    }
  }

  html.private {
      --background-color-canvas: linear-gradient(to bottom, #480808 0%,#240103 93%,#200000 97%,#1E0000 100%) !important;
  }

  #main-window[privatebrowsingmode="temporary"] #TabsToolbar {
    background-color: #CC190032 !important;
  }
}
/* ... */

